# mirror-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: api-reference.md  architecture.md  installation.md
src/mirror_mcp/: __init__.py  models.py  server.py
src/mirror_mcp/analyzers/: __init__.py  statistics.py  time_patterns.py  topics.py
src/mirror_mcp/generators/: __init__.py  suno_prompt.py
src/mirror_mcp/parsers/: __init__.py  youtube.py
tests/: test_analyzers.py  test_generators.py  test_parsers.py  test_server.py
tests/fixtures/: sample_watch_history.json
